# Electric_Sheep_kernel

./: README  build_kernel.sh  indulge_kconfig_fix.diff
Kernel/: .config  .config.old  .initram_list  Makefile  Module.symvers
Kernel/arch/arm/: Kconfig
Kernel/drivers/: Kconfig  Makefile
Kernel/drivers/cpufreq/: Kconfig  Kconfig.smartass  Makefile  cpufreq.c  cpufreq_conservative.c  cpufreq_ondemand.c  cpufreq_smartass.c  cpufreq_stats.c  cpufreq_stats.c.orig
Kernel/drivers/fsr/: .bml_blkdev.o.cmd  .bml_block.o.cmd  .built-in.o.cmd  .debug.o.cmd  .fsr.ko.cmd  .fsr.mod.o.cmd  .fsr.o.cmd  .fsr_base.o.cmd  .fsr_stl.ko.cmd  .fsr_stl.mod.o.cmd  .fsr_stl.o.cmd  .stl_blkdev.o.cmd  .stl_block.o.cmd  fsr.ko  fsr_stl.ko
Kernel/drivers/input/: Makefile  input.c
Kernel/drivers/leds/: Kconfig  Makefile  led-class.c  ledtrig-timer.c
Kernel/drivers/net/: Kconfig  Makefile
Kernel/drivers/power/: Makefile  fuel_gauge.c  s5pc110_battery.c  s5pc110_battery.h
Kernel/fs/rfs/nativefs/btfs/oam/: Makefile.am
Kernel/init/: Kconfig
Kernel/kernel/: kernel_sec_debug.c  panic.c  printk.c  sched.c  sysctl.c
Kernel/mm/: vmscan.c
Kernel/scripts/: conmakehash  kallsyms
modules/dpram_recovery/: .dpram_recovery.ko.cmd  .dpram_recovery.mod.o.cmd  .dpram_recovery.o.cmd  dpram_recovery.c  dpram_recovery.h  dpram_recovery.ko  modules.order
modules/onedram/: .dpram.ko.cmd  .dpram.mod.o.cmd  .dpram.o.cmd  Module.symvers  dpram.c  dpram.h  dpram.ko  modules.order
modules/onedram_svn/: Makefile  Module.symvers  modules.order
modules/samsung/: Makefile  Module.symvers  modules.order
(+413 files in other folders)
